# wo2-oral-history-matching-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
interview_transcripts/: .gitkeep
output/: .gitkeep
scripts/: run_pipeline.py
src/wo2_oralhistory_matching/: batching.py  captions.py  chat_router.py  download_model.py  embeddings.py  matching.py  matching_pipeline.py  metadata.py  openai_client.py  prompts.py  response_cleaner.py  segments.py  serialize.py  thesaurus.py
